--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -1,1 +1,16 @@
+<style>
+  body {
+    background-color: #eee;
+  }
+
+  h1 {
+    color: black;
+    font-size: 24pt;
+  }
+</style>
+
 <h1>Welcome to jungle!</h1>
+
+<script>
+  console("Welcome to jungle!");
+</script>
