update prettier config

--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -179,7 +179,8 @@
 
     <input
       type="text"
-      id="user-name"
+      id="username"
+      name="username"
       class="form-control"
       placeholder="Full name"
       required=""
@@ -187,7 +188,8 @@
     />
     <input
       type="email"
-      id="user-email"
+      id="email"
+      name="email"
       class="form-control"
       placeholder="Email address"
       required
@@ -195,7 +197,8 @@
     />
     <input
       type="password"
-      id="user-pass"
+      id="password"
+      name="password"
       class="form-control"
       placeholder="Password"
       required
@@ -203,7 +206,8 @@
     />
     <input
       type="password"
-      id="user-repeatpass"
+      id="passwordVerify"
+      name="passwordVerify"
       class="form-control"
       placeholder="Repeat Password"
       required
