--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -4,6 +4,9 @@
   }
 
   .navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 1rem 2rem;
   }
 
