--- a/app/views/about.html
+++ b/app/views/about.html
@@ -35,14 +35,14 @@
 </nav>
 
 <main>
-  <h1 class="text-secondary">Welcome to jungle!</h1>
+  <h1 class="text-secondary">About us!</h1>
 
   <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste laborum quae culpa impedit veritatis rerum nam nulla?
-    Eius voluptate perspiciatis rem obcaecati saepe nisi, fugiat atque, nostrum deleniti cum tempore.
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, odit maiores! Adipisci voluptatum nam odit qui,
+    excepturi et maiores quos quod recusandae laboriosam porro, voluptate error minus corporis. Repellat, sed.
   </p>
 </main>
 
 <script>
-  document.title = "Welcome to jungle!";
+  document.title = "About us!";
 </script>
